# universal-lora

./: CHANGELOG.md   LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: conftest.py  test_inference.py  test_replaced_layers.py  test_save_load.py
universal_lora/: __init__.py  utils.py
universal_lora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
universal_lora/layers/: conv.py  default_layer.py  dense.py
