[project]
name = "universal-lora"
version = "0.1.0"
description = "Parameter-efficient LoRA wrapper for any PyTorch model."
authors = [{ name = "Foivos Ntelemis", email = "f.ntelemis@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "timm>=0.9.12"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["universal_lora*"]